--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,13 +7,16 @@
       <form>
         <div>
           <mat-form-field>
-            <input matInput placeholder="Username" type="text" [(ngModel)]="username" name="username" required>
+            <input matInput placeholder="USERNAME" type="text" [(ngModel)]="username" name="username" required>
           </mat-form-field>
         </div>
         <div>
-          <mat-form-field>
-            <input matInput placeholder="Password" type="password" [(ngModel)]="password" name="password" required>
-          </mat-form-field>
+          <app-password-field 
+            [value]="password" 
+            [name]="'password'" 
+            [placeholder]="'PASSWORD'" 
+            (updateValueEvent)="onPasswordChange($event)"
+          />
         </div>
         <div class="flex justify-center">
           <button mat-raised-button color="primary" (click)="login()" type="submit">LOGIN</button>
