refactor: use formgroup and formcontrol for login

--- a/src/app/components/inputs/password/password.component.html
+++ b/src/app/components/inputs/password/password.component.html
@@ -1,11 +1,11 @@
 <mat-form-field>
+    <mat-label>{{ label }}</mat-label>
     <input 
       matInput 
-      [placeholder]="placeholder" 
       [type]="hidePassword ? 'password' : 'text'" 
-      [ngModel]="value" 
+      [formControl]="password"
       [name]="name"
-      (ngModelChange)="onValueChanged($event)" 
+      (ngModelChange)="onValueChange()" 
       required
     >
     <button 
@@ -17,4 +17,5 @@
     >
       <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
     </button>
+    <mat-error *ngIf="password.errors?.['required']">{{ error }}</mat-error>
   </mat-form-field>
