--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,22 +4,24 @@
       <mat-card-title class="mt-3">LOGIN</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <form>
-        <div>
+      <form [formGroup]="fg" (ngSubmit)="login()">
+        <div class="mb-3">
           <mat-form-field>
-            <input matInput placeholder="USERNAME" type="text" [(ngModel)]="username" name="username" required>
+            <mat-label>USERNAME</mat-label>
+            <input matInput type="text" id="username" formControlName="username" name="username" required>
+            <mat-error *ngIf="username?.errors?.['required']">USERNAME REQUIRED!</mat-error>
           </mat-form-field>
         </div>
-        <div>
+        <div class="mb-3">
           <app-password-field 
-            [value]="password" 
             [name]="'password'" 
-            [placeholder]="'PASSWORD'" 
-            (updateValueEvent)="onPasswordChange($event)"
+            [label]="'PASSWORD'" 
+            (sendPasswordEvent)="onPasswordChange($event)"
+            [error]="'PASSWORD REQUIRED!'"
           />
         </div>
         <div class="flex justify-center">
-          <button mat-raised-button color="primary" (click)="login()" type="submit">LOGIN</button>
+          <button mat-raised-button color="primary" type="submit">LOGIN</button>
         </div>
       </form>
     </mat-card-content>
