--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -8,7 +8,7 @@
         <div class="mb-3">
           <mat-form-field>
             <mat-label>USERNAME</mat-label>
-            <input matInput type="text" id="username" formControlName="username" name="username" required>
+            <input matInput type="text" id="input-login-username" formControlName="username" name="username" required>
             <mat-error *ngIf="username?.errors?.['required']">USERNAME REQUIRED!</mat-error>
           </mat-form-field>
         </div>
@@ -18,10 +18,11 @@
             [label]="'PASSWORD'" 
             (sendPasswordEvent)="onPasswordChange($event)"
             [error]="'PASSWORD REQUIRED!'"
+            [id]="'input-login-password'"
           />
         </div>
         <div class="flex justify-center">
-          <button mat-raised-button color="primary" type="submit">LOGIN</button>
+          <button mat-raised-button color="primary" type="submit" id="btn-login-submit">LOGIN</button>
         </div>
       </form>
     </mat-card-content>
