--- a/src/app/components/inputs/password/password.component.html
+++ b/src/app/components/inputs/password/password.component.html
@@ -7,6 +7,7 @@
       [name]="name"
       (ngModelChange)="onValueChange()" 
       required
+      [id]="id"
     >
     <button 
       mat-icon-button 
@@ -14,6 +15,7 @@
       (click)="togglePassword($event)" 
       [attr.aria-label]="'Hide password'" 
       [attr.aria-pressed]="hidePassword"
+      [id]="'btn-toggle-password'"
     >
       <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
     </button>
